# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/user/login": {
             "post": {
-                "description": "用户登录权健",
+                "description": "用户登录权鉴",
                 "consumes": [
                     "application/json"
                 ],
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/control.UserRegisterService"
+                            "$ref": "#/definitions/control.UserLoginInfo"
                         }
                     }
                 }
@@ -40,6 +40,20 @@
         }
     },
     "definitions": {
+        "control.UserLoginInfo": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
         "control.UserLoginService": {
             "type": "object",
             "required": [
@@ -48,31 +62,6 @@
             ],
             "properties": {
                 "password": {
-                    "type": "string",
-                    "maxLength": 40,
-                    "minLength": 8
-                },
-                "user_name": {
-                    "type": "string",
-                    "maxLength": 30,
-                    "minLength": 5
-                }
-            }
-        },
-        "control.UserRegisterService": {
-            "type": "object",
-            "required": [
-                "password",
-                "time",
-                "user_name"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "maxLength": 40,
-                    "minLength": 8
-                },
-                "time": {
                     "type": "string",
                     "maxLength": 40,
                     "minLength": 8
